Fixed nav bar alignment and edited wording for nav page

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ text-align: center;
 }
 
 nav li {
-padding: 5%;
+padding: 3%;
 text-decoration: none;
 margin-bottom: 20%;
 font-weight: bold;
